# p2_goldberga_seferie

./: CMakeLists.txt  package.xml
launch/: p2a.launch  p2b.launch
misc/: MAP.pgm  MAP.yaml  readme.txt
script/: ball_chase.py  goal_sequence.py
