<?xml version="1.0"?>
<package format="2">
  <name>p2_goldberga_seferie</name>
  <version>0.0.1</version>
  <description>CS 424/524 Assignment 2: navigation and ball chasing</description>
  <maintainer email="goldberg@example.com">goldberg</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
</package>
